@@ -73,18 +73,21 @@ CHANGELOG
 2011/XX/XX Version 0.8.0 alpha 3
 --------------------------------
 
+* `Mock` call lists (`call_args_list`, `method_calls` & `mock_calls`) are now
+  custom list objects that allow membership tests for "sub lists" and have
+  an `assert_has_calls` method for unordered call checks
 * `callargs` changed to *always* be a three-tuple of `(name, args, kwargs)`
 * Addition of `mock_calls` list for *all* calls (including magic methods and
   chained calls)
 * Extension of `call` object to support chained calls and `callargs` for better
   comparisons with or without names. `call` object has a `call_list` method for
   chained calls
+* Added the public `instance` argument to `create_autospec`
+* Support for using Java exceptions as a `side_effect` on Jython
 * Improved failure messages for `assert_called_with` and
   `assert_called_once_with`
 * BUGFIX: Fixed bug in `patch.multiple` for argument passing when creating
   mocks
-* Added the public `instance` argument to `create_autospec`
-* Support for using Java exceptions as a `side_effect` on Jython
 
 
 2011/07/16 Version 0.8.0 alpha 2
